syntax = "proto3";
import "ping.proto";
import "pong.proto";

option java_package = "t.it.simplespringclient.stubs";
option java_multiple_files = true;

service PingServiceStub{
  rpc Request(Ping) returns (Pong);
}